vlib/v/checker/tests/assign_any_err.vv
fn g[T](x T) {
	for _ in 0 .. 10 {
		_ := any{}
	}
}

fn main() {
	g[int](1)
}
